--- a/Lesson3/Web.config
+++ b/Lesson3/Web.config
@@ -5,6 +5,11 @@
   -->
 <configuration>
   <system.web>
+    <pages>
+      <controls>
+        <add src="~/User_Control/Jambotron.ascx" tagName="Jambotron" tagPrefix="bs3"/>
+      </controls>
+    </pages>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
   </system.web>
